--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
       matrix:
         include:
           - os: ubuntu-latest
-            java: 8
+            java: 21
     runs-on: ${{ matrix.os }}
     env:
       # define Java options for both official sbt and sbt-extras
@@ -21,10 +21,10 @@ jobs:
     - name: Setup JVM
       uses: actions/setup-java@v3
       with:
-        distribution: 'temurin'
+        distribution: 'corretto'
         java-version: ${{ matrix.java }}
         cache: 'sbt'
     - name: Build and test
       run: |
-        sbt -v ++2.12.17! "scalaxbPlugin/scripted"
+        sbt -v ++2.12.18! "scalaxbPlugin/scripted"
         sbt -v +integration/test
